--- a/src/App/views/base.view.twig
+++ b/src/App/views/base.view.twig
@@ -5,6 +5,6 @@
 
 		{% block main %}{% endblock %}
 
-		{% block footer %}{{include('parts/footer.view.php')}}{% endblock %}
+		{% block footer %}{{include('parts/footer.view.twig')}}{% endblock %}
 </body>
 </html>
