--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -2,19 +2,37 @@
 
 {% block main %}
     <main>
-        <h1>{{ titulo }}</h1>
+        <h1>Bienvenidos al Paraíso Playero</h1>
                 
         <section class="center">
+            <h2> {{ titulo }} </h2>
             <p>
                 Sumérgete en una experiencia de playa inolvidable con nuestro exclusivo complejo de alquiler de sombrillas y carpas en la costa. Disfruta del sol y el mar con comodidad absoluta en nuestras modernas carpas equipadas, mientras nuestro personal atento se encarga de todos los detalles. Además, relájate en nuestra refrescante pileta con vista al océano o disfruta de una amplia variedad de bebidas y platos frescos en nuestra cantina playera. Te invitamos a vivir la combinación perfecta de relajación, diversión y servicios de primera en tu día de playa con nosotros.
             </p>
-            <img src="./../imagenes/carpas2.jpg" alt="Carpas1">
+
+            <section id="carousel" class="carousel">
+			    <section id="carousel-slides-container">
+                    <figure class="carousel-slide">
+                        <img src="./../imagenes/complejo1.jpeg"  alt="Carpas1">
+                    </figure>
+                    <figure class="carousel-slide">
+                        <img src="./../imagenes/complejo2.jpeg"  alt="Carpas1">
+                    </figure>
+                   <figure class="carousel-slide">
+                        <img src="./../imagenes/complejo3.jpeg" alt="Carpas1">
+                    </figure>
+                    <figure class="carousel-slide">
+                        <img src="./../imagenes/complejo4.jpeg" alt="Carpas1">
+                    </figure>
+                </section>
+            </section>
+
         </section>
     
         <section>
             <h2>Carpas</h2>
             <figure>
-                <img src="./../imagenes/carpas2.jpg" alt="carpa">
+                <img src="./../imagenes/carpas2.jpeg" alt="carpa">
             </figure>
             <p class="parrafo">
                 Un servicio de carpa en la playa de Mar del Plata brinda la oportunidad de disfrutar del sol y el mar con comodidad y estilo. Con carpas privadas equipadas con mobiliario, atención personalizada para bebidas y alimentos, junto con toallas y servicio de limpieza, ofrece una experiencia relajada y sin preocupaciones. Además, la posibilidad de reservar anticipadamente asegura un espacio ideal para aprovechar al máximo el día en la playa.
@@ -23,7 +41,7 @@
         <section>
             <h2>Sombrillas</h2>
             <figure>
-                <img src="./../imagenes/mesa1.png" alt="carpa">
+                <img src="./../imagenes/sombrilla.jpeg" alt="carpa">
             </figure>
             <p class="parrafo">
                 Nuestro servicio de mesa con sombrilla redefine la experiencia playera, ofreciéndote un oasis personal en la costa. Con nuestras mesas estratégicamente ubicadas y equipadas con cómodas sillas, te brindamos la oportunidad de disfrutar del sol y el mar con la máxima comodidad. La sombrilla adjunta proporciona sombra para momentos de relajación mientras te sumerges en la brisa marina. Nuestro objetivo es ofrecerte un espacio exclusivo y acogedor para que disfrutes de cada momento en la playa con tranquilidad y confort
