--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style/reset.css" rel="stylesheet" type="text/css">
     <link href="./style/styles.css" rel="stylesheet" type="text/css">
+    <script src="./scripts/utils.js"></script>
+	<script src="./scripts/index.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Century+Gothic&display=swap" rel="stylesheet">
     <title> {{ titulo }} </title>
 </head>
