--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -6,7 +6,7 @@
             <p>Teléfono: +123456789</p>
             <p>Email: info@tuempresa.com</p>
         </section>
-        <section>
+        {# <section>
             <h3> <?=  $titulo ?> </h3>
             <ul>
                 <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li>
@@ -14,6 +14,6 @@
                 <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li>
             </ul>
-        </section>
+        </section> #}
     </footer>
 
