--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -6,29 +6,12 @@
                 
         <section class="center">
             <h2> {{ titulo }} </h2>
+            <section class="carousel"></section>
             <p>
                 Sumérgete en una experiencia de playa inolvidable con nuestro exclusivo complejo de alquiler de sombrillas y carpas en la costa. Disfruta del sol y el mar con comodidad absoluta en nuestras modernas carpas equipadas, mientras nuestro personal atento se encarga de todos los detalles. Además, relájate en nuestra refrescante pileta con vista al océano o disfruta de una amplia variedad de bebidas y platos frescos en nuestra cantina playera. Te invitamos a vivir la combinación perfecta de relajación, diversión y servicios de primera en tu día de playa con nosotros.
             </p>
-
-            <section id="carousel" class="carousel">
-			    <section id="carousel-slides-container">
-                    <figure class="carousel-slide">
-                        <img src="./../imagenes/complejo1.jpeg"  alt="Carpas1">
-                    </figure>
-                    <figure class="carousel-slide">
-                        <img src="./../imagenes/complejo2.jpeg"  alt="Carpas1">
-                    </figure>
-                   <figure class="carousel-slide">
-                        <img src="./../imagenes/complejo3.jpeg" alt="Carpas1">
-                    </figure>
-                    <figure class="carousel-slide">
-                        <img src="./../imagenes/complejo4.jpeg" alt="Carpas1">
-                    </figure>
-                </section>
-            </section>
-
         </section>
-    
+        
         <section>
             <h2>Carpas</h2>
             <figure>
