--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -142,8 +142,6 @@ figure {
 	align-items: center;
 }
 
-
-
 footer {
     background-color: var(--background-section1); 
     text-align: center;
@@ -151,6 +149,100 @@ footer {
     color: var(--text);
     margin-top: 40px; /* Espacio entre última sección y footer */
 }
+
+.carousel {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .carousel-images {
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.5s ease;
+    display: flex;
+   }
+  
+  .carousel-image {
+    width: auto;
+    object-fit: cover;
+  }
+
+  .carousel-image.active {
+    display: block;
+  }
+  
+  .carousel-prev-button,
+  .carousel-next-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border: none;
+    border-radius: 50%;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .carousel-prev-button {
+    left: 10px;
+  }
+  
+  .carousel-next-button {
+    right: 10px;
+  }
+  
+  .carousel-thumbnails {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  .thumbnail {
+    width: 50px;
+    height: 50px;
+    margin: 0 5px;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+  }
+  
+  .thumbnail:hover {
+    opacity: 0.7;
+  }
+
+  .thumbnail.active-thumbnail {
+    border: 2px solid black;
+  }
+
+  .carousel-progress {
+    width: 100%;
+    height: 10px;
+    background-color: #ccc;
+  }
+  
+  .progress-bar {
+    height: 100%;
+    width: 0;
+    background-color: #007bff;
+    transition: width 0.3s ease-in-out;
+  }
+
+  .progress-bar-animated {
+    animation: progress-animation 2s linear infinite;
+  }
+  
+  @keyframes progress-animation {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%;
+    }
+  }
 
 @media (max-width: 768px) {
     body {
