--- a/src/App/views/beachResort.view.twig
+++ b/src/App/views/beachResort.view.twig
@@ -4,5 +4,6 @@
 {% block main %}
         <h1>{{ beachResort.fields.name }}</h1>
         <section>
+            <img src="./../imagenes/complejo.svg" alt="carpa">
         </section>
 {% endblock %}
