--- a/src/App/views/login.view.twig
+++ b/src/App/views/login.view.twig
@@ -1,9 +1,8 @@
 {% extends "base.view.twig" %}
 
 {% block main %}
-    {% block title %}Iniciar Sesión{% endblock title %}
 
-    {% block content %}
+
     <section class="login">
         <h2>Iniciar sesión</h2>
         {% if hayLogin %}
@@ -23,5 +22,5 @@
 
     </section>
 
-    {% endblock content %}
+    {% endblock %}
 {% endblock %}
