--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -1,19 +1,9 @@
 
-    <footer>
-        <section>
-            <h3>Contacto</h3>
-            <p>Dirección: Calle Ejemplo, Ciudad, País</p>
-            <p>Teléfono: +123456789</p>
-            <p>Email: info@tuempresa.com</p>
-        </section>
-        {# <section>
-            <h3> <?=  $titulo ?> </h3>
-            <ul>
-                <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-        </section> #}
+    <footer id="footer">
+        <a class="email" href="#"><i class="fa-solid fa-envelope"></i> info@tuempresa.com</a>
+        <a class="whatsapp" href="https://wa.me/2346505022" target="_blank" class="whatsApp"><i class="fa-brands fa-whatsapp"></i> 2346505022</a>
+        <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a class="phone" href="#"><i class="fa-solid fa-phone"></i> +123456789</a>
+        <a class="instagram" href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
     </footer>
 
