--- a/src/App/views/login.view.twig
+++ b/src/App/views/login.view.twig
@@ -1,8 +1,7 @@
 {% extends "base.view.twig" %}
 
 {% block main %}
-
-
+<main>
     <section class="login">
         <h2>Iniciar sesión</h2>
         {% if hayLogin %}
@@ -21,5 +20,6 @@
         {% endif %}
 
     </section>
+</main>
 
 {% endblock %}
