--- a/src/App/views/portal-admin/inicio-usuario.view.twig
+++ b/src/App/views/portal-admin/inicio-usuario.view.twig
@@ -6,16 +6,16 @@
 <nav>
     <ul>
         <li>
-            <a href="/portal-admin/perfil-usuario">Gestión de Balnearios</a>
+            <a href="/portal-admin/balnearios">Balnearios</a>
         </li>
         <li>
-            <a href="/portal-admin/historial-turnos">Gestión de Unidades de Balnearios</a>
+            <a href="/portal-admin/historial-turnos">Unidades de Balnearios</a>
         </li>
         <li>
-            <a href="/portal-admin/estudios-realizados">Gestión de Promociones</a>
+            <a href="/portal-admin/estudios-realizados">Promociones</a>
         </li>
         <li>
-            <a href="/">Cerrar sesión</a>
+            <a href="/?sesion=cerrar">Cerrar sesión</a>
         </li>
     </ul>
 </nav>
