--- a/src/App/views/beachResort.view.twig
+++ b/src/App/views/beachResort.view.twig
@@ -3,8 +3,11 @@
         <h1>{{ beachResort.fields.name }}</h1>
         <section>
             <ol>
-                <li>{{ beachResort.fields.city }}</li>
-                <li>{{ beachResort.fields.city }}</li>
+                <li>{{ beachResort.fields.description }}</li>
+                <li>{{ city.fields.name }}</li>
+				{% for service in service_colection %}
+        			<li>{{ service.name }}</li>
+        		{% endfor %}
             </ol>    
         </section>
         <section>
