--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -6,13 +6,12 @@
                 <label for="ciudad">Ciudad:</label>
                 <select class="selectCiudades" name="ciudad" id="ciudad"></select>
                 <label for="balneario">Balneario:</label>
-                <select class="balnearios" name="balneario" id="balneario">
-                </select>
+                <select class="balnearios" name="balneario" id="balneario"></select>
                 <label for="fecha_entrada">Fecha de Entrada:</label>
                 <input type="date" id="fecha_entrada" name="fecha_entrada">
                 <label for="fecha_salida">Fecha de Salida:</label>
                 <input type="date" id="fecha_salida" name="fecha_salida">
-                <button class="bReserva" type="buttom">Reservar</button>
+                <a href="#" class="bReserva" onclick="enviarFormulario()">Reservar</a>
         </section>
 
         <h1>Bienvenidos al Paraíso Playero</h1>       
