--- a/src/App/views/base.view.twig
+++ b/src/App/views/base.view.twig
@@ -6,5 +6,9 @@
 		{% block main %}{% endblock %}
 
 		{% block footer %}{{include('parts/footer.view.twig')}}{% endblock %}
+		
+		<script>
+			{% block javascript %}{% endblock %}
+		</script>
 </body>
 </html>
