--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -11,7 +11,7 @@
                 <input type="date" id="fecha_entrada" name="fecha_entrada">
                 <label for="fecha_salida">Fecha de Salida:</label>
                 <input type="date" id="fecha_salida" name="fecha_salida">
-                <a href="#" class="bReserva" onclick="enviarFormulario()">Reservar</a>
+                <a href="#" class="bReserva">Reservar</a>
         </section>
 
         <h1>Bienvenidos al Paraíso Playero</h1>       
