new beach resort

--- a/src/App/views/index.view.twig
+++ b/src/App/views/index.view.twig
@@ -14,7 +14,7 @@
                 <a href="#" class="bReserva">Reservar</a>
         </section>
 
-        <h1>Bienvenidos al Paraíso Playero</h1>       
+        <h1 class="titulo">Bienvenidos al Paraíso Playero</h1>       
         <section class="center">
             <section class="carousel"></section>
             <p>
