--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -157,6 +157,9 @@ h1 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); 
 }
 
+.titulo {
+    text-align: center;
+}
 
 p, ol {
 	font-family: 'Century Gothic', sans-serif;
@@ -179,6 +182,32 @@ h2{
     line-height: 1.8;
 }
 
+.newBeachResort {
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border-radius: 10px;
+  gap: 15px;
+  margin-bottom: 50px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.newBeachResort .bReserva {
+  margin-top: 30px;
+}
+
+.newBeachResort label {
+  font-weight: bold;
+}
+
+.newBeachResort textarea {
+  max-width: 99%;
+  min-width: 99%;
+}
 
 figure {
 	display: flex;
@@ -188,7 +217,6 @@ figure {
 
 footer {
     bottom: 0;
-    width: 100%;
     background-color: var(--background-section1); 
     text-align: center;
     padding: 20px;
