vista para datos personales

--- a/src/App/views/beachResort.view.twig
+++ b/src/App/views/beachResort.view.twig
@@ -39,6 +39,8 @@
         </form>
         <object type="image/svg+xml" data="./../imagenes/complejo.svg" id="svgImage"></object>
 
+        <input type="button" value="Continuar" class="bContinuar" id="botonContinuar"></input>
+
 
     </section>
 {% endblock %}
