alta de balneario

--- a/src/App/views/portal-admin/adminBeachResor.view.twig
+++ b/src/App/views/portal-admin/adminBeachResor.view.twig
@@ -2,7 +2,10 @@
 {% block main %}
         <h1>{{ titulo }}</h1>
         <section>
-               <table class="tents-table">
+                <section>
+                        <a class="bNew" href="/newbeachresort">Nuevo Balneario</a>
+                </section> 
+                <table class="tents-table">
                         <thead>
                                 <th>ID</th>
                                 <th>Nombre</th>
