Cambio en las migraciones

--- a/src/App/views/beachResort.view.twig
+++ b/src/App/views/beachResort.view.twig
@@ -37,7 +37,7 @@
                 </p>
             </fieldset>
         </form>
-        <object type="image/svg+xml" data="./../imagenes/complejo.svg" id="svgImage"></object>
+        <object type="image/svg+xml" data="./../imagenes/{{ beachResort.fields.id }}/complejo.svg" id="svgImage"></object>
 
         <input type="button" value="Continuar" class="bContinuar" id="botonContinuar"></input>
 
